# DaktLib-GUI

./: AGENT.md  ARCHITECTURE.md  CMakeLists.txt  DaktLib.GUI.nuspec  README.md  RUNNER_SETUP.md  TODO.md
.cache/clangd/index/: Animation.cpp.EF4EEF9B11A6835F.idx  Animation.hpp.BF2F5EDC98D24ACE.idx  Context.cpp.6F276425296EF6E9.idx  Context.hpp.6CF41AF8F4F58AEA.idx  DX11.cpp.49E19B2F3AF50583.idx  DX11.hpp.E7B40708AA638460.idx  DX12.cpp.7DF928F955FC2693.idx  DX12.hpp.B73B734A52DB32F3.idx  DrawList.cpp.F398A0E1DAE7887D.idx  DrawList.hpp.E66F432F7863FEF1.idx  Frame.cpp.1DC0CFE2100A1FC9.idx  Frame.hpp.E3DDF4162E1E8B3F.idx  IRenderBackend.hpp.979BCC7FA092F1C3.idx  Immediate.cpp.55326E5DBC92D749.idx  Immediate.hpp.E059E3FCF43F8CC2.idx  Input.cpp.FD837BABA3FBEEAD.idx  Input.hpp.2393838A5478C7B3.idx  Layout.cpp.096A6C2EAFF931E9.idx  Layout.hpp.34F59AA8E4A6037E.idx  OpenGL.cpp.9761D9D95828F1DE.idx  OpenGL.hpp.E48DD69D8AC47EA3.idx  Style.cpp.20DA87F467A1ED77.idx  Style.hpp.87E9CDE554DF46EE.idx  Text.cpp.D68C64E41A7F5AD7.idx  Text.hpp.12A5D548846C1DF5.idx  Types.cpp.B70495DFB4A17223.idx  Types.hpp.76DB6117824C64B3.idx  UIContainer.cpp.D74609C530AAABD6.idx  UIContainer.hpp.0EDFD715A5643113.idx  Vulkan.cpp.95D4ACB472D6600A.idx  Vulkan.hpp.799C02166DE7B89A.idx  Widget.cpp.834BE485F31BB2F6.idx  Widget.hpp.DE7FB16D29B375C4.idx  c_api.cpp.9C3A52A3355949FC.idx  c_api.h.4AC2D339C292E6AF.idx
.github/workflows/: build.yml  release.yml
cmake/: DaktLib-GUIConfig.cmake.in  DaktLib.GUI.targets  daktguiConfig.cmake.in
examples/: CMakeLists.txt  showcase.cpp
include/dakt/gui/: Containers.hpp  Context.hpp  D3D11Backend.hpp  DataWidgets.hpp  DrawList.hpp  Font.hpp  GUI.hpp  Theme.hpp  Version.hpp  Widgets.hpp
include/dakt/gui/animation/: Animation.hpp
include/dakt/gui/backend/: DX11.hpp  DX12.hpp  IRenderBackend.hpp  Metal.hpp  OpenGL.hpp  Vulkan.hpp
include/dakt/gui/backend/vulkan/: VulkanBackend.hpp
include/dakt/gui/backends/: Backends.hpp  D3D11Backend.hpp  D3D12Backend.hpp  MetalBackend.hpp  OpenGLBackend.hpp  RenderBackend.hpp  VulkanBackend.hpp
include/dakt/gui/c_api/: c_api.h  dakt_gui.h
include/dakt/gui/core/: Context.hpp  DrawList.hpp  Flags.hpp  Font.hpp  Frame.hpp  Types.hpp
include/dakt/gui/draw/: DrawBatcher.hpp  DrawList.hpp
include/dakt/gui/framework/: Context.hpp  Theme.hpp
include/dakt/gui/immediate/: Immediate.hpp  ImmediateContext.hpp
include/dakt/gui/immediate/Containers/: Child.hpp  Group.hpp  Layout.hpp  Window.hpp
include/dakt/gui/immediate/Widgets/: Button.hpp  Checkbox.hpp  Color Editors  Color.hpp  InputText.hpp  ListBox.hpp  Menu.hpp  Popup.hpp  Popups  Progress.hpp  ProgressBar.hpp  RadioButton.hpp  Selectable.hpp  Slider.hpp  Table.hpp  Text.hpp  Tooltip.hpp  Tooltips  Tree.hpp
include/dakt/gui/immediate/core/: Frame.hpp  ImmediateContext.hpp
include/dakt/gui/immediate/internal/: ImmediateItem.hpp  ImmediateState.hpp  ImmediateStateAccess.hpp  WidgetBase.hpp
include/dakt/gui/input/: HitTest.hpp  Input.hpp
include/dakt/gui/layout/: Layout.hpp
include/dakt/gui/retained/: Containers.hpp  UIContainer.hpp  Widget.hpp  Widgets.hpp
include/dakt/gui/retained/containers/: ContainerBase.hpp  (+6 more)
include/dakt/gui/style/: Style.hpp
include/dakt/gui/text/: Font.hpp  GlyphAtlas.hpp  GlyphCache.hpp  OTFParser.hpp  SDFGenerator.hpp  TTFParser.hpp  Text.hpp  TextCursor.hpp  TextShaper.hpp  VariableFont.hpp
include/dakt/gui/widgets/: Color.hpp  Containers.hpp  DataWidgets.hpp  Widgets.hpp
shaders/compiled/: ShaderBytecode.hpp
shaders/sources/: text.frag.glsl  text.vert.glsl  ui.frag.glsl  ui.vert.glsl
src/: CMakeLists.txt  Containers.cpp  Context.cpp  DataWidgets.cpp  DrawList.cpp  Font.cpp  Input.cpp  Layout.cpp  Theme.cpp  Types.cpp  Version.hpp.in  Widgets.cpp
src/animation/: Animation.cpp  Timeline.cpp
src/backend/: Backend.cpp  DX11.cpp  DX12.cpp  Metal.mm  OpenGL.cpp  Vulkan.cpp
src/backend/dx11/: DX11Backend.cpp  Rendering.cpp  Resources.cpp
src/backend/dx12/: DX12Backend.cpp  Rendering.cpp  Resources.cpp
src/backend/metal/: MetalBackend.mm  Rendering.mm  Resources.mm
src/backend/opengl/: OpenGLBackend.cpp  Rendering.cpp  Resources.cpp
src/backend/vulkan/: Rendering.cpp  Resources.cpp  VulkanBackend.cpp
src/backends/: D3D11Backend.cpp  MetalBackend.mm  RenderBackend.cpp
src/c_api/: Context.cpp  Input.cpp  Widgets.cpp  c_api.cpp  dakt_gui.cpp
src/core/: Context.cpp  DrawList.cpp  Flags.cpp  Font.cpp  Frame.cpp  Types.cpp
src/draw/: DrawBatcher.cpp  DrawList.cpp
src/framework/: Context.cpp  Input.cpp  Layout.cpp  Theme.cpp
src/immediate/: Immediate.cpp  ImmediateContext.cpp  Widgets.cpp
src/immediate/Containers/: Child.cpp  Group.cpp  Layout.cpp  Window.cpp
src/immediate/Widgets/: Button.cpp  Checkbox.cpp  Color.cpp  InputText.cpp  Menu.cpp  Popup.cpp  ProgressBar.cpp  Slider.cpp  Table.cpp  Text.cpp  Tooltip.cpp  Tree.cpp
src/immediate/core/: Frame.cpp  ImmediateContext.cpp
src/immediate/internal/: ImmediateState.cpp  ImmediateStateAccess.cpp
src/input/: HitTest.cpp  Input.cpp
src/layout/: FlexLayout.cpp  Layout.cpp
src/retained/: UIContainer.cpp  Widget.cpp
src/retained/containers/: Grid.cpp  Splitter.cpp  Stack.cpp  Wrap.cpp
src/retained/widgets/: ColorPicker.cpp  Dropdown.cpp  Menu.cpp  ProgressBar.cpp  RadioButton.cpp  Shape.cpp  Table.cpp  TextInputEnhanced.cpp
src/style/: Style.cpp  Theme.cpp
src/subsystems/draw/: DrawBatcher.cpp  DrawList.cpp
src/subsystems/input/: HitTest.cpp  Input.cpp
src/subsystems/layout/: FlexLayout.cpp  Layout.cpp
src/subsystems/style/: Style.cpp  Theme.cpp
src/subsystems/text/: Font.cpp  GlyphAtlas.cpp  GlyphCache.cpp  OTFParser.cpp  SDFGenerator.cpp  TTFParser.cpp  Text.cpp  TextCursor.cpp  TextShaper.cpp  VariableFont.cpp
src/text/: Font.cpp  GlyphAtlas.cpp  GlyphCache.cpp  OTFParser.cpp  SDFGenerator.cpp  TTFParser.cpp  Text.cpp  TextCursor.cpp  TextShaper.cpp  VariableFont.cpp
src/widgets/: Color.cpp  Containers.cpp  DataWidgets.cpp  Widgets.cpp
tests/: CMakeLists.txt  phase1_tests.cpp  phase2_tests.cpp  phase3_tests.cpp  phase4_tests.cpp  smoke.cpp
(+52 files in other folders)
